# url-shortener

./: .gitignore  Makefile  docker-compose.yml  package-lock.json
protos/: shorten-url-post.proto  shortened-url-response.proto
reverse-proxy/: nginx.conf
shortener-backend/: Cargo.toml  Dockerfile  build.rs
shortener-backend/migrations/2024-04-28-100646_create_slug_map/: down.sql  up.sql
shortener-backend/migrations/2024-05-08-192949_slug_db/: down.sql  up.sql
shortener-backend/src/: lib.rs  main.rs  models.rs  schema.rs
shortener-backend/src/protos/: mod.rs  shorten_url_post.rs  shortened_url_response.rs
shortener-backend/src/repository/: mod.rs  slug_repository.rs  slug_repository_impl.rs
shortener-frontend/: Dockerfile  package-lock.json  package.json
shortener-frontend/src/components/: shorten_form.svelte
shortener-frontend/src/protos/: shorten-url-post.ts  shortened-url-response.ts
shortener-frontend/src/routes/: +page.svelte
shortener-frontend/src/routes/[slug]/: +page.svelte
